--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -5,7 +5,7 @@ if(Object.keys(StudentAnswer).length === 0) {
 else {
     %>
     <div id = "content" class="container">
-        <h1 id = 'content'> Score </h1>     
+        <h1 id = 'content'> Assignment Status </h1>     
         <div class="box bg-light  mb-5 shadow" >
         <table class="table text-center">
             <thead>
@@ -91,6 +91,6 @@ else {
             </table>                    
         
         </div>
-    </div>
+    </div><br>
 
  <% } %>
