--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -1,6 +1,7 @@
 <div id = "content" class="container">
-        <h1 id = 'content'><i class="far fa-sun"></i> Recommendation </h1> 
-        <div class="box bg-light  mb-5 shadow" >
+        <br>
+        <h1 id = 'content'><i class="far fa-sun"></i>Learning Recommendation </h1> 
+        <div style="padding: 10px;" class="box bg-light  mb-5 shadow" >
     
             <div class="row">
                 <div class="col">
