update แบบฝึกหัดบท 3

--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -41,7 +41,7 @@
 <!-- LEFT -->
     <main class="grid-container">
         <div id="content" class="container"> 
-            <thead>
+            <thead><br>
                 <div class="item1">
                     <p><b>Name :</b> <%= person.name%></p> 
                     <b>Class</b>
