--- a/public/stylesheets/home1.css
+++ b/public/stylesheets/home1.css
@@ -11,17 +11,15 @@ body {
 main { 
     background-color: #E2D9E5;
     margin-top: 10px;
-    margin-left: 10%;
-    margin-right: 10%;
+    margin-left: auto;
+    margin-right: auto;
     height: 100%;
     text-align: left;
     font-size: 20px;
 }
 
 .item1 {
-
     height: 140px;
-    margin-top: 30px;
     background-color: #9C7EB7;
     padding: 10px;
     width: auto;
