--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -46,17 +46,14 @@
         <!-- POSTTEST  -->
         <% if (PostTestDone === 1) { %><%- include('../layouts/post-test') %><% }%>
         <!-- END Of POSTTEST  -->
-
-        
         <!-- MIDDLE 1 -->
         <%- include('../layouts/course-middle') %>
         <!-- END Of MIDDLE  -->
         <!-- MIDDLE 2 -->
         <%- include('../layouts/course-middle_Score') %>
         <!-- END Of MIDDLE  -->
+        <%- include('../layouts/recommen_Competency') %>
+        </div><br>
 
-        
-
-        </div>
 
 <%- include('../layouts/footer') %>
