--- a/views/student/layouts/course-middle_Score.ejs
+++ b/views/student/layouts/course-middle_Score.ejs
@@ -88,9 +88,11 @@ else {
     } %>
 
                 </tbody>
-            </table>                    
+            </table>       
+                       
         
         </div>
-    </div><br>
+    </div>
+ 
 
  <% } %>
