--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -29,7 +29,7 @@
                             <div lang="ja">
                                 <p class="wrapbox auto">
                                     <b>1. Algorithms and Flowcharts </b>
-                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest"">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Algorithms_and_Flowcharts-pretest">แบบทดสอบก่อนเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts">เนื้อหาบทเรียน</a>
                                     <br><a href="/course-Algorithms_and_Flowcharts-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
