--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -641,30 +641,26 @@
                 
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #465e8f;">
-                    ประเมิณความมั่นใจในการทำ Pre-Test ของตนเอง จาก 0-5 <br> (5 คือมากสุด, 0 คือน้อยสุด)
+                    ประเมิณความมั่นใจในการทำ Pre-Test ของตนเอง<br> (5 คือมากสุด, 1 คือน้อยสุด)
                 </p>
-                    <input type="radio" class="btn-check" name="rating" id="rating-1" autocomplete="off" value="0" required>
+                    <input type="radio" class="btn-check" name="rating" id="rating-1" autocomplete="off" value="1">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-1">
-                        0
-                    </label>
-                    <input type="radio" class="btn-check" name="rating" id="rating-2" autocomplete="off" value="1">
-                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-2">
                         1 ⭐
                     </label>
-                    <input type="radio" class="btn-check" name="rating" id="rating-3" autocomplete="off" value="2">
-                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-3">
+                    <input type="radio" class="btn-check" name="rating" id="rating-2" autocomplete="off" value="2">
+                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-2">
                         2 ⭐⭐
                     </label>
-                    <input type="radio" class="btn-check" name="rating" id="rating-4" autocomplete="off" value="3">
-                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-4">
+                    <input type="radio" class="btn-check" name="rating" id="rating-3" autocomplete="off" value="3">
+                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-3">
                         3 ⭐⭐⭐
                     </label>
-                    <input type="radio" class="btn-check" name="rating" id="rating-5" autocomplete="off" value="4">
-                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-5">
+                    <input type="radio" class="btn-check" name="rating" id="rating-4" autocomplete="off" value="4">
+                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-4">
                         4 ⭐⭐⭐⭐
                     </label>
-                    <input type="radio" class="btn-check" name="rating" id="rating-6" autocomplete="off" value="5">
-                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-6">
+                    <input type="radio" class="btn-check" name="rating" id="rating-5" autocomplete="off" value="5">
+                    <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-5">
                         5 ⭐⭐⭐⭐⭐
                     </label>
 
