--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -641,7 +641,7 @@
                 
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #465e8f;">
-                    ประเมิณความมั่นใจในการทำ Pre-Test ของตนเอง<br> (5 คือมากสุด, 1 คือน้อยสุด)
+                    ประเมินความมั่นใจในการทำ Pre-Test ของตนเอง<br> (5 คือมากสุด, 1 คือน้อยสุด)
                 </p>
                     <input type="radio" class="btn-check" name="rating" id="rating-1" autocomplete="off" value="1">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-1">
