--- a/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
+++ b/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
@@ -579,6 +579,7 @@
                     18.3 (Improvement) ให้เขียนโปรแกรมรับค่าตัวแปร a, b, c จาก Keyboard เพื่อหาค่า x ของสมการดังนี้ (1 คะแนน) <br>
                     กำหนดให้ a = 1, b = -1, c = -6 และให้แสดงค่า x ทั้งสมการที่เป็นเครื่องหมาย + และที่เป็นเครื่องหมาย - <br>
                     (ให้เขียนอธิบายสิ่งที่แก้ไข และผลลัพธ์ที่ได้) <br>
+                    <iframe src="https://drive.google.com/file/d/1kCREaMw9FcJlIJeznL0dCqotXYIE6PSH/preview" width="350" height="200" allow="autoplay"></iframe>
                     </p>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="คำตอบ" rows="4" cols="30" name="sendLink182" required></textarea>
