--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -68,7 +68,7 @@
     
 
     <%# LV1 %> <br>
-
+<!--
         <script> // * Timer * //
             var timerVariable = setInterval(countUpTimer, 1000);
             var totalSeconds = 0;
@@ -85,8 +85,7 @@
                 hour + ':' + minute + ':' + seconds;
             }
         </script>
-        <div id="count_up_timer">00:00:00</div>
-        <button id="stop_count_up_timer" onclick="clearInterval(timerVariable)">Stop Time</button>
+        <div id="count_up_timer">00:00:00</div>-->
         
        
     
@@ -604,6 +603,7 @@
                     18.3 (Improvement) ให้เขียนโปรแกรมรับค่าตัวแปร a, b, c จาก Keyboard เพื่อหาค่า x ของสมการดังนี้ (1 คะแนน) <br>
                     กำหนดให้ a = 1, b = -1, c = -6 และให้แสดงค่า x ทั้งสมการที่เป็นเครื่องหมาย + และที่เป็นเครื่องหมาย - <br>
                     (ให้เขียนอธิบายสิ่งที่แก้ไข และผลลัพธ์ที่ได้) <br>
+                    <iframe src="https://drive.google.com/file/d/1kCREaMw9FcJlIJeznL0dCqotXYIE6PSH/preview" width="350" height="200" allow="autoplay"></iframe>
                     </p>
                     <div class="form-group">
                         <textarea class="form-control"  placeholder="คำตอบ" rows="4" cols="30" name="sendLink182" required></textarea>
