--- a/views/student/course/course_main.ejs
+++ b/views/student/course/course_main.ejs
@@ -45,14 +45,15 @@
         <% } %>    
         <!-- POSTTEST  -->
         <% if (PostTestDone === 1) { %><%- include('../layouts/post-test') %><% }%>
-        <!-- END Of POSTTEST  -->
-        <!-- MIDDLE 1 -->
+
+        <!-- LESSON -->
         <%- include('../layouts/course-middle') %>
-        <!-- END Of MIDDLE  -->
-        <!-- MIDDLE 2 -->
+
+        <!-- ASSIGNMENT STATUS -->
         <%- include('../layouts/course-middle_Score') %>
-        <!-- END Of MIDDLE  -->
-        <%- include('../layouts/recommen_Competency') %>
+
+        <!-- COMPETENCY  
+        <%- include('../layouts/recommen_Competency') %>-->
         </div><br>
 
 
