--- a/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
+++ b/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
@@ -639,7 +639,7 @@
                         </div>
 
                 <p type="text"  class="list-group-item list-group-item-action" style="color: white; background-color: #465e8f;">
-                    ประเมินความมั่นใจในการทำ Post-Test ของตนเอง จาก 1-5 <br> (5 คือมากสุด, 1 คือน้อยสุด)
+                    ประเมินความมั่นใจในการทำ Post-Test จาก 1-5 <br> (5 คือมากสุด, 1 คือน้อยสุด)
                 </p>
                     <input type="radio" class="btn-check" name="rating" id="rating-1" autocomplete="off" value="1" required>
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="rating-1">
