--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -268,14 +268,60 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <div class="row">
+                            <div class="col">
+                                <b>เส้นทางตาม Project ที่ต้องการ</b>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Tic-Path" value="TicTacToe">
+                                    <label class="form-check-label" for="Tic-Path">
+                                    Ticket Booking System
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Lib-Path" value="Library">
+                                    <label class="form-check-label" for="Lib-Path">
+                                    Library System
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="w-100"></div>
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Ros-Path" value="Roshambo">
+                                    <label class="form-check-label" for="Ros-Path">
+                                    Roshambo
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Cal-Path" value="Calendar">
+                                    <label class="form-check-label" for="Cal-Path">
+                                    Calendar
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="radio" name="RecommendationSetting" id="Calc-Path" value="Calculator">
+                                    <label class="form-check-label" for="Calc-Path">
+                                    Calculator
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
                     </div>   
                 </div>
                 <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Close</button>
                 <button type="submit" class="btn btn-dark">Submit</button>
                 </div>
-            </form>       
+            </form>          
     
           </div>
         </div>
