--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -77,7 +77,7 @@
                             <%= RecommendaResult[0].RecommendationType %> <%# วิธีแนะนำคือ %> 
                             <br>
                             
-                            <% if (TicTacToePercent === 100 && Library_SystemPercent === 100 && RoshamboPercent === 100 && CalendarPercent === 100 && CalculatorPercent === 100 ) { %> <%# ถ้า Path ครบแล้ว %> 
+                            <% if (TicketBooking_SystemPercent === 100 && Library_SystemPercent === 100 && RoshamboPercent === 100 && CalendarPercent === 100 && CalculatorPercent === 100 ) { %> <%# ถ้า Path ครบแล้ว %> 
                                 <p>คุณได้เรียนครบแล้ว!</p>
                             <% } else { %>
                                 <div class="row">
@@ -205,14 +205,17 @@
               
              
         <% } %>
-<br>
-        
-        
-</div>
-        
-        
-       
+    <br>
+        <!--
+        <div id="content" class="container"> 
+            <h1>Project</h1>
+            <a style="color: black;" href="/project-Ticket_Booking_System"> Ticket Booking System</a>
+        </div>-->
     </div>
+        
+    </div>
+
+    
 
 
     <!-- Modal -->
