--- a/views/student/project/1_TicketBookingSystem.ejs
+++ b/views/student/project/1_TicketBookingSystem.ejs
@@ -56,7 +56,10 @@
 
         <%# LV4 %>                
         <h2><u>Ticket Booking System</u></h2> 
-
+        <p>ให้ซื่อสัตย์ในการทำข้อสอบ <br>
+        Ticket Booking System ต้องผ่านการทำ Post-Test 1 ถึง Post-Test 4 <br>
+        อนุญาตให้เปิดเอกสาร Lectures และ Assignments ประกอบการเรียนได้เท่านั้น <br>
+        ไม่อนุญาตให้ค้นหาข้อมูลทาง Internet</p>
 
         <div class="group2" style="background-color: #212121;">
             <iframe src="<%= ADRI  %> " width="600px" height="800" allow="autoplay"></iframe>
