--- a/views/student/project/1_TicketBookingSystem.ejs
+++ b/views/student/project/1_TicketBookingSystem.ejs
@@ -64,7 +64,7 @@
         <div class="group2" style="background-color: #212121;">
             <iframe src="<%= ADRI  %> " width="600px" height="800" allow="autoplay"></iframe>
             <div>
-                <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Draw.io</a>
+                <a class="DrawIo btn" href="https://app.diagrams.net/" target="_blank">Click to go to Draw.io</a>
 
                 <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="600px" height="740px"></iframe> 
             </div>
@@ -78,8 +78,7 @@
         <br><div class="form-group" >
             <h3>Deployment</h3>
             <p>Source Code ที่เขียนขึ้น (50 คะแนน)</p>
-            <textarea style="height: 400px;" class="form-control" id="lineCounter" readonly rows="10">1 </textarea>
-            <textarea style="height: 400px;" class="form-control" id="code" name="code" rows="10" required></textarea>
+            <textarea  class="form-control"  name="code" rows="10" required></textarea>
         </div>
         
 
@@ -91,6 +90,9 @@
             <p>โจทย์คำถาม ถ้าต้องการแสดงข้อมูล ที่อยู่ ของผู้จอง ตั้งแต่บ้านเลขที่ หมู่ที่ ตำบล อำเภอ จังหวัด และรหัสไปรษณีย์ ต้องใช้คำสั่งใดในการรับค่าของข้อมูลนี้</p>
             <textarea class="form-control" style="height: 150px;" rows="4" name="expResult17" cols="50"></textarea>
     <br>
+        
+   
+
         Language : <select name="lang"><option value="C">C</option></select>
         <div class="d-grid gap-2">
             <br>
