--- a/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
+++ b/views/student/pretest/4_Operators_and_Expressions-pretest.ejs
@@ -68,7 +68,7 @@
     
 
     <%# LV1 %> <br>
-<!--
+<!---->
         <script> // * Timer * //
             var timerVariable = setInterval(countUpTimer, 1000);
             var totalSeconds = 0;
@@ -85,7 +85,7 @@
                 hour + ':' + minute + ':' + seconds;
             }
         </script>
-        <div id="count_up_timer">00:00:00</div>-->
+        <div id="count_up_timer">00:00:00</div> <br>
         
        
     
