--- a/views/index/index_student.ejs
+++ b/views/index/index_student.ejs
@@ -206,11 +206,11 @@
              
         <% } %>
     <br>
-        <!--
+        <!---->
         <div id="content" class="container"> 
             <h1>Project</h1>
             <a style="color: black;" href="/project-Ticket_Booking_System"> Ticket Booking System</a>
-        </div>-->
+        </div>
     </div>
         
     </div>
