--- a/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
+++ b/views/student/quiz/4_Operators_and_Expressions-quiz.ejs
@@ -124,7 +124,7 @@
                     </label>
                     <input type="radio" class="btn-check" name="choice3" id="option3-2" autocomplete="off" value="B">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option3-2">
-                        การทำงานทางตรรกะ OR (กรณีใดเป็นจริง ผลลัพธ์จะเป็นจริง), การทำงานทางตรรกะ AND (เป็นจริงทั้งหมด ผลลัพธ์จะเป็นจริง
+                        การทำงานทางตรรกะ OR (กรณีใดเป็นจริง ผลลัพธ์จะเป็นจริง), การทำงานทางตรรกะ AND (เป็นจริงทั้งหมด ผลลัพธ์จะเป็นจริง)
                     </label>
                     <input type="radio" class="btn-check" name="choice3" id="option3-3" autocomplete="off" value="C">
                     <label class="list-group-item btn-outline-dark list-group-item-action" for="option3-3">
