update Pre/Post-test 5

--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -53,9 +53,10 @@
                                     <br><a href="/course-Operators_and_Expressions-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>5. Selection Statement&Output </b>
-                                    <br><a href="/course-Selection_Statement">เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-InputOutput-quiz">แบบทดสอบหลังเรียน</a>-->
+                                    <b>5. Selection Statements </b>
+                                    <br><a href="/course-Selection_Statements-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Selection_Statements">เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Selection_Statements-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>6. Loop Statement </b>
