--- a/views/student/course/5_Selection_Statements-course.ejs
+++ b/views/student/course/5_Selection_Statements-course.ejs
@@ -26,7 +26,7 @@
     </style>
 
     <link rel='stylesheet' href='stylesheets/home.css' />
-    <title>Selection Statement</title>
+    <title>Selection Statements</title>
 </head>
 
 <body>
@@ -50,7 +50,7 @@
     <!-- MIDDLE 1 -->
     <div class="content">
         <div id = "content" class="container">
-            <h1>บทที่ 5 Selection Statement</h1>
+            <h1>บทที่ 5 Selection Statements</h1>
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/19FMO5bKNsalcvrO_c0YGNpgffpQ-o7in/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <h2>การควบคุมแบบลำดับ Sequential Control Statements</h2>
