Pre/Post-test 6

--- a/views/student/layouts/course-middle.ejs
+++ b/views/student/layouts/course-middle.ejs
@@ -59,9 +59,10 @@
                                     <br><a href="/course-Selection_Statements-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
-                                    <b>6. Loop Statement </b>
-                                    <br><a href="/course-Loop_Statement"> เนื้อหาบทเรียน</a>
-                                    <!--<br><a href="/course-Selection_Statement-quiz">แบบทดสอบหลังเรียน</a>-->
+                                    <b>6. Loop Statements </b>
+                                    <br><a href="/course-Loop_Statements-pretest">แบบทดสอบก่อนเรียน</a>
+                                    <br><a href="/course-Loop_Statements"> เนื้อหาบทเรียน</a>
+                                    <br><a href="/course-Loop_Statements-quiz">แบบทดสอบหลังเรียน</a>
                                 </p>
                                 <p class="wrapbox auto">
                                     <b>7. Array and String </b>
