--- a/views/student/course/6_Loop_Statements-course.ejs
+++ b/views/student/course/6_Loop_Statements-course.ejs
@@ -50,7 +50,7 @@
     <!-- MIDDLE 1 -->
     <div class="content">
         <div id = "content" class="container">
-            <h1>บทที่ 6 Loop Statement</h1>
+            <h1>บทที่ 6 Loop Statements</h1>
             <div class="accordion" id="accordionParentSyntax">
                 <iframe src="https://drive.google.com/file/d/1oNeppnUNCA7OoeRny4YLdgAceX2AobQW/preview" width="100%" height="820" allow="autoplay"></iframe>
                 <h2>สร้างสูตรคูณด้วย For Loop Control Statements</h2>
