--- a/views/student/course/3_Input_and_Output-course.ejs
+++ b/views/student/course/3_Input_and_Output-course.ejs
@@ -59,16 +59,16 @@
             <div class="accordion" id="accordionParentSyntax">
                 <h2>บทที่ 3 Input and Output</h2>
                 <b>แบบฝึกหัด</b>
-                <a href="/course-Input_and_Output#Knowledge" class="scrollbtn"  type="button"  >
+                <a href="/course-Input_and_Output#Knowledge" class="scrollbtnK" type="button"  >
                     Knowledge
                 </a>
-                <a href="/course-Input_and_Output#Tracing" class="scrollbtn"  type="button"  >
+                <a href="/course-Input_and_Output#Tracing" class="scrollbtnT" type="button"  >
                     Tracing
                 </a>
-                <a href="/course-Input_and_Output#Explaining" class="scrollbtn"  type="button"  >
+                <a href="/course-Input_and_Output#Explaining" class="scrollbtnE" type="button"  >
                     Explaining
                 </a>
-                <a href="/course-Input_and_Output#Writing" class="scrollbtn"  type="button"  >
+                <a href="/course-Input_and_Output#Writing" class="scrollbtnW" type="button"  >
                     Writing
                 </a>
                 <div id="collapseIntroduce" class="accordion-collapse collapse show" data-bs-parent="#accordionParentSyntax">
