--- a/public/stylesheets/gamequiz.css
+++ b/public/stylesheets/gamequiz.css
@@ -82,7 +82,7 @@
     font-size: 18px;
     background-color: #30015a;
     padding: 15px;
-    height: 400px;
+    height: auto;
     border-radius: 10px; 
 }
 h5{
@@ -129,7 +129,7 @@ div.btn {
 
 .gamecontent-E {
     background-color: #ffb8f8;
-    height: 750px;
+    height: auto;
     width: 1200px;
     padding: 15px;
     border-radius: 20px;
