--- a/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
+++ b/views/student/course/1_Algorithms_and_Flowcharts-course.ejs
@@ -24,9 +24,7 @@
         }
         
     </style>
-    <link rel='stylesheet' href='stylesheets/home.css' />
     <link rel='stylesheet' href='stylesheets/gamequiz.css' />
-    <link rel='stylesheet' href='stylesheets/Drag_Drop.css' />
     <script src="javascripts/gamequiz.js"></script>
     <title>Algorithms and Flowcharts</title>
 </head>
@@ -650,7 +648,8 @@
                             <p id="demo" class="button" onclick="myFunctionW20()">10
                             </p>
                             <p id="demo" class="button" onclick="myFunctionW20()">15
-                            </p>
+                            </p></div>
+                            <div class="btn">
                             <p id="demo" class="button" onclick="myFunctionT20()">20
                             </p>
                             <p id="demo" class="button" onclick="myFunctionW20()">30
@@ -668,172 +667,208 @@
                 <div class="gamecontent-E">
                     <div class="question-E">
                     <h5>อธิบาย Algorithm การทำงานของ Flowchart ต่อไปนี้ได้ถูกต้อง</h5>
-                    &ensp;START
-                    <br>&ensp;PRINT S (Show the sum obtained in Step 3)
-                    <br>&ensp;STOP
-                    <br>&ensp;S ← A+B (Store the sum of the values in A and B in S)
-                    <br>&ensp;INPUT A and B from Keyboard
-                    </p>
+                    <iframe src="https://drive.google.com/file/d/1mu21oYf752z8vBeahh-URaibjbQaEFvR/preview" width="640" height="480" allow="autoplay"></iframe>
                     <p style="text-align: center;" id="demo21"></p><br>
                     </div>
                     <div class="ans">
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW21()">1 2 3 4 5
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionT21()">
+                                1: START
+                                <br>2: INPUT A and B from Keyboard
+                                <br>3: S ← A+B (Store the sum of the values in A and B in S)
+                                <br>4: PRINT S (Show the sum obtained in Step 3)
+                                <br>5: STOP
+                            </p>
+                        </div>    
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW21()">1 3 5 4 2
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionT21()">1 4 5 3 2
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW21()">1 4 2 3 5
-                        </p>
-                    </div>                    
-                </div></div></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW21()">
+                                1: START
+                                <br>2: S ← A+B (Store the sum of the values in A and B in S)
+                                <br>3: INPUT A and B from Keyboard
+                                <br>4: PRINT S (Show the sum obtained in Step 3)
+                                <br>5: STOP
+                            </p>
+                        </div>   
+                    </div>
+                </div>
+            </div>
 
             <!--* ข้อ 22 E2 *-->
             <div class="game">
                 <div class="gamecontent-E">
                     <div class="question-E">
                     <h5>อธิบาย Algorithm การทำงานของ Flowchart ต่อไปนี้ได้ถูกต้อง</h5>
-                    &ensp;START
-                    <br>&ensp;PRINT V (Show the volume obtained in Step 3)
-                    <br>&ensp;INPUT L, B, H from Keyboard
-                    <br>&ensp;COMPUTE V ← L*B*H
-                    <br>&ensp;STOP
-                    </p>
+                    <iframe src="https://drive.google.com/file/d/19FKC8k4iyiMB8SBuZ36Ixy6MUGtQhM0M/preview" width="640" height="480" allow="autoplay"></iframe>
                     <p style="text-align: center;" id="demo22"></p><br>
                     </div>
                     <div class="ans">
-                        <div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW22()">1 2 3 4 5
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW22()">
+                                1: START
+                                <br>2: PRINT V (Show the volume obtained in Step 3)
+                                <br>3: INPUT L, B, H from Keyboard
+                                <br>4: COMPUTE V ← L*B*H
+                                <br>5: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionT22()">1 4 2 3 5
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW22()">1 2 5 3 4
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW22()">5 4 3 2 1
-                        </p>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionT22()">
+                                1: START
+                                <br>2: INPUT L, B, H from Keyboard
+                                <br>3: COMPUTE V ← L*B*H
+                                <br>4: PRINT V (Show the volume obtained in Step 3)
+                                <br>5: STOP
+                            </p>
+                        </div>
                     </div>
-                        
-                    </div>
-                </div></div></div>
+                </div>
+            </div>
 
             <!--* ข้อ 23 E3 *-->
             <div class="game">
                 <div class="gamecontent-E">
                     <div class="question-E">
                     <h5>อธิบาย Algorithm การทำงานของ Flowchart ต่อไปนี้ได้ถูกต้อง</h5>
-                    &ensp;PRINT G
-                    <br>&ensp;ELSE
-                    <br>&ensp;G ← B
-                    <br>&ensp;START
-                    <br>&ensp;THEN G ← A
-                    <br>&ensp;INPUT TO A, B
-                    <br>&ensp;IF A > B
-                    <br>&ensp;END-IF
-                    <br>&ensp;STOP
-                    </p>
+                    <iframe src="https://drive.google.com/file/d/1Rbomv03gTdU9jqrALlfP92CQ9L_KJ57H/preview" width="640" height="480" allow="autoplay"></iframe>
                     <p style="text-align: center;" id="demo23"></p><br>
                     </div>
                     <div class="ans">
-                        <div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW23()">1 9 5 7 6 2 4 8 3
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW23()">
+                                1: START
+                                <br>2: INPUT TO A, B
+                                <br>3: IF A > B
+                                <br>4:        THEN G ← A
+                                <br>5: ELSE
+                                <br>6:        G ← B
+                                <br>7: PRINT G
+                                <br>8: END-IF
+                                <br>9: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW23()">2 6 9 5 3 1 4 8 7
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW23()">
+                                1: START
+                                <br>2: INPUT TO A, B
+                                <br>3: IF A > B
+                                <br>4:        G ← B
+                                <br>5: PRINT G
+                                <br>6: ELSE       
+                                <br>7:         THEN G ← A
+                                <br>8: END-IF
+                                <br>9: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW23()">4 5 2 1 9 8 7 6 3
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionT23()">
+                                1: START
+                                <br>2: INPUT TO A, B
+                                <br>3: IF A > B
+                                <br>4:        THEN G ← A
+                                <br>5: ELSE
+                                <br>6:        G ← B
+                                <br>7: END-IF
+                                <br>8: PRINT G
+                                <br>9: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionT23()">8 5 6 1 4 2 3 7 9
-                        </p>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW23()">
+                                1: START
+                                <br>2: INPUT TO A, B
+                                <br>3: IF A > B
+                                <br>4:        G ← B
+                                <br>5: ELSE
+                                <br>6:        THEN G ← A
+                                <br>7: END-IF
+                                <br>8: PRINT G
+                                <br>9: STOP
+                            </p>
+                        </div>
                     </div>
-                        
-                    </div>
-                </div></div></div>
+                </div>
+            </div>
 
             <!--* ข้อ 24 E4 *-->
             <div class="game">
                 <div class="gamecontent-E">
                     <div class="question-E">
                     <h5>อธิบาย Algorithm การทำงานของ Flowchart ต่อไปนี้ได้ถูกต้อง</h5>
-                    &ensp;INPUT TO A
-                    <br>&ensp;STOP
-                    <br>&ensp;END-IF
-                    <br>&ensp;THEN PRINT “It is an even number.”
-                    <br>&ensp;ELSE
-                    <br>&ensp;COMPUTE R ← Remainder of (A/2)
-                    <br>&ensp;PRINT “It is an odd number.”
-                    <br>&ensp;IF R = 0
-                    <br>&ensp;START
-                    </p>
+                    <iframe src="https://drive.google.com/file/d/1DUUKd84EFxrY4xo3vO41uSfWlHxairgO/preview" width="640" height="480" allow="autoplay"></iframe>
                     <p style="text-align: center;" id="demo24"></p><br>
                     </div>
                     <div class="ans">
-                        <div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW24()">1 2 3 4 5 6 7 8 9
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW24()">
+                                1: START
+                                <br>2: INPUT TO A
+                                <br>3: COMPUTE R ← Remainder of (A/2)
+                                <br>4: IF R = 0
+                                <br>5:      PRINT “It is an odd number.”
+                                <br>6: ELSE
+                                <br>7:      THEN PRINT “It is an even number.”
+                                <br>8: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionT24()">2 9 8 5 6 3 7 4 1
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW24()">4 2 9 5 8 7 1 6 3
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW24()">9 6 5 8 7 3 2 1 4
-                        </p>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionT24()">
+                                1: START
+                                <br>2: INPUT TO A
+                                <br>3: COMPUTE R ← Remainder of (A/2)
+                                <br>4: IF R = 0
+                                <br>5:      THEN PRINT “It is an even number.”
+                                <br>6: ELSE
+                                <br>7:       PRINT “It is an odd number.”
+                                <br>8: END-IF
+                                <br>9: STOP
+                            </p>
+                        </div>
                     </div>
-                        
-                    </div>
-                </div></div></div>
+                </div>
+            </div>
 
             <!--* ข้อ 25 E5 *-->
             <div class="game">
                 <div class="gamecontent-E">
                     <div class="question-E">
                     <h5>อธิบาย Algorithm การทำงานของ Flowchart ต่อไปนี้ได้ถูกต้อง</h5>
-                    &ensp;START
-                    <br>&ensp;INPUT TO SP
-                    <br>&ensp;COMPUTE NP ← NP+ST
-                    <br>&ensp;END-IF
-                    <br>&ensp;COMPUTE ST ← SP*.18
-                    <br>&ensp;PRINT NP
-                    <br>&ensp;IF CHOICE = “N”
-                    <br>&ensp;ELSE
-                    <br>&ensp;INPUT TO CHOICE (“N” for national and “F” for foreign)
-                    <br>&ensp;THEN COMPUTE ST ← SP*.08
-                    <br>&ensp;STOP
-                    
-                    </p>
+                    <iframe src="https://drive.google.com/file/d/1FNgahFDmm9X-fcUPECIVFrZm7GhAMIS-/preview" width="640" height="480" allow="autoplay"></iframe>
                     <p style="text-align: center;" id="demo25"></p><br>
                     </div>
                     <div class="ans">
-                        <div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionT25()">1 2 9 8 7 10 4 6 3 5 11
-                        </p></div>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionT25()">
+                                1: START
+                                <br>2: INPUT TO SP
+                                <br>3: INPUT TO CHOICE (“N” for national and “F” for foreign)
+                                <br>4: IF CHOICE = “N”
+                                <br>5:        THEN COMPUTE ST ← SP*.08
+                                <br>6: ELSE
+                                <br>7:        COMPUTE ST ← SP*.18
+                                <br>8: END-IF
+                                <br>9:        COMPUTE NP ← NP+ST
+                                <br>10: PRINT NP
+                                <br>11: STOP
+                            </p>
+                        </div>
                         <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW25()">3 10 2 5 6 11 8 7 4 1 9
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW25()">1 9 5 2 3 6 8 7 10 4 11
-                        </p></div>
-                        <div class="btn">
-                            <p id="demo" class="button" onclick="myFunctionW25()">1 3 11 5 9 8 7 4 2 6 10
-                        </p>
+                            <p id="demo" class="button" style="text-align: left;" onclick="myFunctionW25()">
+                                1: START
+                                <br>2: INPUT TO CHOICE (“N” for national and “F” for foreign)
+                                <br>3: INPUT TO SP
+                                <br>4: IF CHOICE = “N”
+                                <br>5:      THEN COMPUTE ST ← SP*.08
+                                <br>6: ELSE
+                                <br>7:      COMPUTE NP ← NP+ST
+                                <br>8: END-IF
+                                <br>9:      COMPUTE ST ← SP*.18
+                                <br>10: PRINT NP
+                                <br>11: STOP
+                            </p>
+                        </div>
                     </div>
-                        
-                    </div>
-                </div></div></div>
+                </div>
+            </div>
 
 
 
