--- a/views/student/layouts/recommendation.ejs
+++ b/views/student/layouts/recommendation.ejs
@@ -37,10 +37,10 @@
                   
                     <% }else if(RecommendaResult[0].RecommendCourse === "Selection Statement"){ %>
                         
-                            <button onclick="window.location.href='/course-Selection_Statement'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Selection_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                     <% }else if(RecommendaResult[0].RecommendCourse === "Loop Statement"){ %>
                         
-                            <button onclick="window.location.href='/course-Loop_Statement'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
+                            <button onclick="window.location.href='/course-Loop_Statements'" type="button" class="btn btn-outline-dark btn-lg btn-block mb-2"><i class="fa fa-paper-plane" style="font-size:16px"></i> เริ่ม</button>
                   
                     <% }else if(RecommendaResult[0].RecommendCourse === "Array and String"){ %>
                         
