--- a/public/stylesheets/gamequiz.css
+++ b/public/stylesheets/gamequiz.css
@@ -139,6 +139,7 @@ div.btn {
 
 .gamecontent-W {
     background-color: #a0de87;
+    color: #fff;
     height: auto;
     width: 1200px;
     padding: 15px;
