--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -1098,18 +1098,136 @@
             <!--* writing *-->
             <BR id="Writing"> <br><br>
                 <h2>Writing</h2>
+                <div class="game"></div>
                 <!--* 1 *-->
                 <div class="gamecontent-W">
-                    <iframe src="https://drive.google.com/file/d/1paJ6fajACtcU8nDFjnIzL7dN-_0Af7Qr/preview" width="440" height="500" allow="autoplay"></iframe>
-                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมแสดงค่าของข้อมูลดังนี้ </h5>
+                    <iframe src="https://drive.google.com/file/d/1-QPpyl1V5C7zK5qoQlyfWGEguprDYv4e/preview" width="440" height="500" allow="autoplay"></iframe>                    <iframe src="https://www.programiz.com/c-programming/online-compiler/" width="60%" height="500px"></iframe>  
                 </div>
                 <div class="gamecontent-W">
                     <button class="btn btn-info" onclick="myFunction1()">คลิกเพื่อดูเฉลย</button>
                     <div id="myDIV1" style="margin-top: 10px; display:none; align-items: flex-end;">
-                        <iframe src="https://drive.google.com/file/d/1EgYxJU6l4qsXU6Mwe82plz8dVr05TW7p/preview" width="640" height="480" allow="autoplay"></iframe> 
-                        <iframe src="https://drive.google.com/file/d/1MVCKi40LRmw0Lmkq8VNszbFrMcv10tJ3/preview" width="400" height="480" allow="autoplay"></iframe>
-                </div></div>
+                        <iframe src="https://drive.google.com/file/d/149LvS7BfymjHT62gItQKOJAeBF0B413F/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1vrLHWlEIz7Dgu-x9TDME9dtVqzNkJpGH/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+                
+                <!--* 2 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาพื้นที่สี่เหลี่ยมผืนผ้า </h5>
+                    <iframe src="https://drive.google.com/file/d/1xVXalTVqFl2e0gkCffF60Lhm-Wufm7bl/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction2()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV2" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1hIGMv21RA0NFX2-U9veTBu9ALApAi7HO/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1DHWW9nd8X7-6cpqod3Bc5QVldwzEFrX6/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
 
+                <!--* 3 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาปริมาตรทรงสี่เหลี่ยมมุมฉาก </h5>
+                    <iframe src="https://drive.google.com/file/d/1LaEDhMRSPJg1OloviwErqjOcHnDbT_x0/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction3()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV3" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1vDzCMbzeAFOc0FxU6RgYRCLHYQE1wApe/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1H_Xq6G7x9fyQRy51QcLwTOaf0wBbChtW/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 4 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาดัชนีมวลกาย (BMI) </h5>
+                    <iframe src="https://drive.google.com/file/d/1a1BSeViYP9CbpebOB9Bn81tFrE4RlnWP/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction4()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV4" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1oPJpzEfB_gW7g_cFtOXePPezJx9jkeC0/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1f0RYlqeWPKsakcITbXAFHzg1G0QNtyzy/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 5 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณหาอายุเฉลี่ยของกลุ่มคน </h5>
+                    <iframe src="https://drive.google.com/file/d/1uIrGz9_U_8Y8_xUcJZqECxyYRyrRPYUQ/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction5()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV5" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1PmmCj5TnDEX8_-44JJ1ki1O2bBOyfmDM/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1YE0woMxSfMuo9PW-Eh-7g5J_v9E46Fwd/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 6 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมแปลงเงินจากสกุลดอลลาร์เป็นบาท โดยมีอัตราแลกเปลี่ยนเป็นค่าคงที่ </h5>
+                    <iframe src="https://drive.google.com/file/d/1SCDFasiaANl3U4aUsCcwnxViR-iqDVXy/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction6()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV6" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1k_DdvGtO-5Sfi8Hu0FvzFYptnqdOHnLD/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1e3HIupoiRGMivFKTsX2lR7KQFP9t_Lku/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 7 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
+                    <iframe src="https://drive.google.com/file/d/1r-IyF2eId9YLfVOOfoNQF-OcjzoKs8Sa/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction7()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV7" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1rJUEeidfQOoaON1QMuoJtVyIdrv8ekPa/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1Jx3GH8D-TJFTL3wlEziMWHcwG7vUYq4G/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 8 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเลขยกกำลัง</h5>
+                    <iframe src="https://drive.google.com/file/d/1GUG2Z7362spFZPiGO8HzEFgvRa0EkHMt/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction8()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV8" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1HJn2-RE0GJCh6PWNO1epyZgzAffMO1qw/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1bnbaVOQ3EwLwduqyAwQwrkk7NwTQQsow/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 9 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณเงินเดินทางรถแท็กซี่ โดยใช้ค่าคงที่สำหรับอัตราค่าเริ่มต้น, อัตราค่าโดยสารต่อกิโลเมตร, และระยะทางเดินทาง กำหนดให้ค่าเริ่มต้นคือ 35 บาท, ค่าโดยสาร 5 บาทต่อกิโลเมตร, และระยะทางเดินทางเป็น 10 กิโลเมตร</h5>
+                    <iframe src="https://drive.google.com/file/d/1Hjth3jaz3vhAT2Quy7FfYOUfuveCRZqn/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction9()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV9" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1BxjCX3Jsx7AN0u6zg3Az7EGQJWKrLzom/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1iQXYz2pV0n7R1klLySQ4Bvl_ndQWjuGM/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
+
+                <!--* 10 *-->
+                <div class="gamecontent-W">
+                    <h5 style="text-align: left;">ให้เขียนโปรแกรมคำนวณปริมาณออกซิเจนที่จำเป็นสำหรับการเผาผลาญพลังงานในการออกกำลังกาย</h5>
+                    <iframe src="https://drive.google.com/file/d/1ZeltrcU8kYqA9B_veOMQhAM2nCl_WuYF/preview" width="440" height="500" allow="autoplay"></iframe>
+                </div>
+                <div class="gamecontent-W">
+                    <button class="btn btn-info" onclick="myFunction10()">คลิกเพื่อดูเฉลย</button>
+                    <div id="myDIV10" style="margin-top: 10px; display:none; align-items: flex-end;">
+                        <iframe src="https://drive.google.com/file/d/1CV231w-xyaPhmj1Yh9KnVwB0CeMEXlUQ/preview" width="640" height="480" allow="autoplay"></iframe>
+                        <iframe src="https://drive.google.com/file/d/1ySI9-MZXs1JEqLDEQwQwPlYolhJPujoG/preview" width="400" height="480" allow="autoplay"></iframe>
+                    </div>
+                </div>
 
     
             <!--<button class="click" onClick="window.location.reload();">Refresh Page</button>
