--- a/views/student/course/2_Datatype_and_Variable-course.ejs
+++ b/views/student/course/2_Datatype_and_Variable-course.ejs
@@ -56,14 +56,17 @@
         <div id = "content" class="container">
             <h2>บทที่ 2 Datatype and Variable</h2>
             <b>แบบฝึกหัด</b>
-            <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtn"  type="button"  >
+            <a href="/course-Datatype_and_Variable#Knowledge" class="scrollbtnK"  type="button"  >
                 Knowledge
             </a>
-            <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtn"  type="button"  >
+            <a href="/course-Datatype_and_Variable#Tracing" class="scrollbtnT"  type="button"  >
                 Tracing
             </a>
-            <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtn"  type="button"  >
+            <a href="/course-Datatype_and_Variable#Explaining" class="scrollbtnE"  type="button"  >
                 Explaining
+            </a>
+            <a href="/course-Datatype_and_Variable#Writing" class="scrollbtnW" type="button"  >
+                Writing
             </a>
             
             <div class="accordion" id="accordionParentSyntax">
